--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,13 @@ set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_executable(${PROJECT_NAME} src/main.cpp)
+add_executable(${PROJECT_NAME} include/Camera.hpp
+include/Map.hpp
+include/Player.hpp
+src/Camera.cpp
+src/main.cpp
+src/Map.cpp
+src/Player.cpp)
 
 set(LIBRARIES -lsfml-graphics -lsfml-window -lsfml-system)
 
